# s-graphllm

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  VALIDATION_ANALYSIS.md  pyproject.toml
configs/: dataset_config.yaml  model_config.yaml
docs/: README.md  architecture_diagram.md  component_guide.md  graph_partitioning_theory.md  hierarchical_reasoning_theory.md
docs/methodology/: engine_graph_aware_attention.md  engine_graph_transformer.md  engine_integration.md  engine_node_encoder_decoder.md  instructions.md
docs/methodology/neural_layer/: engine_graph_aware_attention.md  engine_graph_transformer.md  engine_integration.md  engine_node_encoder_decoder.md  instructions.md
docs/methodology/reasoning_layer/: instructions.md  layer_integration.md  llm_agent.md  orchestrator.md
docs/methodology/scalability_layer/: graph_coarsener.md  graph_partitioner.md  instructions.md  layer_integration.md
experiments/: run_ogbn_mag.sh
src/: __init__.py  main.py  utils.py
src/agents/: __init__.py  llm_agent.py  node_encoder_decoder.py  orchestrator.py
src/attention/: __init__.py  graph_aware_attention.py
src/graph_processing/: __init__.py  coarsener.py  graph_transformer.py  partitioner.py
tests/: test_graph_transformer.py  test_node_encoder_decoder.py  test_partitioning.py  test_reasoning.py
